[tool.poetry]
name = "eagerx"
version = "0.1.0"
description = "Engine Angostic Gym Environments for Robotics"
authors = ["Bas van der Heijden <d.s.vanderheijden@tudelft.nl>"]
license = "Apache2.0"

[tool.poetry.dependencies]
python = "^3.6.2"
opencv-python = "^4.3.0.36"
networkx = "^2.5.1"
scikit-image = "^0.17.2"
scipy = "^1.5.4"
gym = "^0.21.0"
tabulate = "^0.8.9"
PyYAML = "^6.0"
rospkg = "^1.3.0"
psutil = "^5.9.0"
Rx = "^3.2.0"
termcolor = "^1.1.0"
defusedxml = "^0.7.1"
netifaces = "^0.11.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
