[tool.poetry]
name = "eagerx"
version = "0.1.9"
description = "Engine Angostic Gym Environments for Robotics"
authors = ["Bas van der Heijden <d.s.vanderheijden@tudelft.nl>", "Jelle Luijkx <j.d.luijkx@tudelft.nl>"]
license = "Apache2.0"
homepage = "https://github.com/eager-dev/eagerx"
repository = "https://github.com/eager-dev/eagerx"
documentation = "https://eagerx.readthedocs.io/en/master/"

[tool.poetry.dependencies]
python = "^3.6.2"
opencv-python = "^4.3.0.36"
networkx = "^2.5.1"
scikit-image = "^0.17.2"
gym = "^0.20.0"
tabulate = "^0.8.9"
PyYAML = "^6.0"
rospkg = "^1.3.0"
psutil = "^5.9.0"
Rx = "^3.2.0"
termcolor = "^1.1.0"
defusedxml = "^0.7.1"
netifaces = "^0.11.0"
pyglet = "^1.5.21"
sphinx-autodoc-typehints = "^1.0"
Sphinx = "^4.0"
sphinx-rtd-theme = "^1.0"
typing = "^3.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^5.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
pytest-timeout = "^2.1.0"

[build-system]
requires = ["poetry-core~=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "eagerx/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
