<?xml version="1.0"?>
<package format="2">
  <name>eagerx_dcsc_setups</name>
  <version>0.0.0</version>
  <description>The eagerx_dcsc_setups package. Many thanks to Will van Geest.</description>

  <maintainer email="j.d.luijkx@tudelft.nl">Jelle Luijkx</maintainer>

  <license>BSD</license>

  <author email="j.d.luijkx@tudelft.nl">Jelle Luijkx</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
